# dcgan_performance_test

./: .gitignore  export_weights.py  inference_pytorch.py
custom_cuda_project/: CMakeLists.txt  custom_cuda_infer  inference_custom_cuda-old.cu  inference_custom_cuda.cu
libtorch_project/: CMakeLists.txt  inference_libtorch.cpp
tensorrt_project/: CMakeLists.txt  inference_tensorrt.cpp
